[tool.poetry]
name = "src"
version = "0.1.0"
description = "Hello World"
license = "GNU Affero"
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/NicholasSynovic/template_python"
repository = "https://github.com/NicholasSynovic/template_python"
keywords = ["Template"]
classifiers = ["Development Status :: 1 - Planning"]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.82.0"
click = "^8.1.7"
pypdf = {version = "^5.0.1", extras = ["crypto"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
